# M.E.R.L.I.N

./: .gitignore  .mcp.json  CLAUDE.md  CYCLE_160_QA_SUMMARY.txt  CYCLE_19_QA_SUMMARY.txt  CUsersPGNK2128Downloadsnps_cachecolumns_temp.txt  Modelfile  PROJECT.md  QA_BLOCKING_ISSUES_SUMMARY.txt  QA_FILES_GENERATED.txt  QA_SCENE_CHAIN_DIAGRAM.txt  QA_SCENE_FLOW_AUDIT.md  QA_SUMMARY.txt  ROADMAP.md  Trinity_Nano_Preview_Corrected.py  default_bus_layout.tres  findings.md  night_mode_handoff.md  package.json  ppt_claude_orange.js  ppt_demo_orange.js  progress.md  project.godot  proxy-strip-tools.js  scene-viewer-godot.html  task_plan.md  validate.bat
.claude/: claude_desktop_config.json  settings.json  settings.local.json
.devcontainer/: devcontainer.json
.merlin_remote/: training_roadmap.json
archive/: progress_archive_2026-02-05_to_2026-02-08.md
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
data/: calendar_events.json  intro_dialogue.json  intro_dialogue_en.json  intro_dialogue_es.json  intro_dialogue_it.json  intro_dialogue_ja.json  intro_dialogue_pt.json  intro_dialogue_zh.json  post_intro_dialogues.json  post_intro_dialogues_en.json  post_intro_dialogues_es.json  post_intro_dialogues_it.json  post_intro_dialogues_ja.json  post_intro_dialogues_pt.json  post_intro_dialogues_zh.json
docs/: BALANCE_FORMULA.md  BEST_PRACTICES.md  DECISION_PIPELINE_SCORING.md  DESIGN_STATUS.md  DEV_PLAN_V2.4.md  DEV_PLAN_V2.5.md  FASTROUTE_AUDIT_REPORT.md  GAMEPLAY_BIBLE.md  GAME_BEHAVIOR.md  GAME_DESIGN_BIBLE.md  GAME_ENCYCLOPEDIA.md  GAME_MECHANICS.md  HUD_LAYOUT_RULES.md  INTRO_TUTO_SEQUENCE.md  LLM_CAPABILITIES_MATRIX.html  MASTER_DOCUMENT.md  NEW_MECHANICS_DESIGN.md  PLAYER_ADHERENCE_MATRIX.md  README.md  RPG_TEST_SYSTEM.md  TUTORIAL_FREE_UX.md  dashboard.html  ecc-lessons-codex.md
llm_simple/: CMakeLists.txt
llm_simple/include/: llm_simple.h
llm_simple/src/: llm_simple.cpp  register_types.cpp  register_types.h
merlin-lora-cpu-v2-output/: README.md
native/: .gdignore  CMakeLists.txt  build_release.bat  compile.bat  compile.ps1  compile_windows.bat  llama_build.bat  rebuild_merlin_llm.bat
native/robot_voice/: CMakeLists.txt
native/robot_voice/src/: register_types.cpp  robot_voice.cpp  robot_voice.h
native/src/: merlin_llm.cpp  merlin_llm.h  register_types.cpp
ollama-proxy/: proxy-strip-tools.js
resources/: charte_orange.md  charte_pdfs_extraits.md  gbc_theme.tres  merlin_manifest.json  orange_boosted_reference.md  orange_boosted_template.html
scenes/: ArbreDeVie.tscn  AutoRun.tscn  BKForestRail.tscn  BKShowcase.tscn  BKTestRoom.tscn  BroceliandeForest3D.tscn  Calendar.tscn  Collection.tscn  DemoOnboarding.tscn  EndRunScreen.tscn  FullRun.tscn  GameMain.tscn  HubAntre.tscn  HubScreen.tscn  IntroCeltOS.tscn  IntroPersonalityQuiz.tscn  IntroTutorial.tscn  MapMonde.tscn  Menu3DCoast.tscn  Menu3DPC.tscn  MenuOptions.tscn  MenuPrincipal.tscn  MerlinCabinHub.tscn  MerlinGame.tscn  MerlinTest.tscn  ReignsGame.tscn  Run3D.tscn  SceneRencontreMerlin.tscn  ScreenshotRunner.tscn  SelectionSauvegarde.tscn  TalentTree.tscn  TestAutoPlay.tscn  TestCombat.tscn  TestJDRMerlin.tscn  TestLLMScene.tscn  TestMerlin.tscn  TestMerlinAI.tscn  TestMerlinLLMBenchmark.tscn  TransitionBiome.tscn  test_skeleton_map.tscn
scripts/: Calendar.gd  Calendar.gd.uid  Collection.gd  Collection.gd.uid  HubAntre.gd  HubAntre.gd.uid  IntroBoot.gd  IntroBoot.gd.uid  IntroBootSimple.gd  IntroBootSimple.gd.uid  IntroCeltOS.gd  IntroCeltOS.gd.uid  IntroMerlinDialogue.gd  IntroMerlinDialogue.gd.uid  IntroPersonalityQuiz.gd  IntroPersonalityQuiz.gd.uid  IntroTutorial.gd  IntroTutorial.gd.uid  LLMManager.gd  LLMManager.gd.uid  MenuOptions.gd  MenuOptions.gd.uid  MenuPrincipalAnimated.gd.uid  MenuPrincipalMerlin.gd  MenuPrincipalReigns.gd  MenuPrincipalReigns.gd.uid  MerlinPortraitManager.gd  MerlinPortraitManager.gd.uid  SceneAntreMerlin.gd  SceneAntreMerlin.gd.uid  SceneEveil.gd  SceneEveil.gd.uid  SceneRencontreMerlin.gd  SceneRencontreMerlin.gd.uid  SelectionSauvegarde.gd  SelectionSauvegarde.gd.uid  TestBrainPool.gd  TestJDRMerlin.gd.uid  TestLLMBenchmark.gd  TestLLMScene.gd  (+86 more)
server/: package-lock.json  package.json  tsconfig.json
shaders/: bestiole_squish.gdshader  bestiole_squish.gdshader.uid  card_silhouette.gdshader  card_silhouette.gdshader.uid  card_sky.gdshader  card_sky.gdshader.uid  cliff_rock.gdshader  cloud_puff.gdshader  color_dither.gdshader  color_dither.gdshader.uid  crt_static.gdshader  crt_static.gdshader.uid  crt_terminal.gdshader  crt_terminal.gdshader.uid  fog_dissolve.gdshader  grass_wind_sway.gdshader  iridescent_border.gdshader  iridescent_border.gdshader.uid  ocean_lowpoly.gdshader  palette_swap.gdshader  palette_swap.gdshader.uid  pixelate.gdshader  pixelate.gdshader.uid  ps1_material.gdshader  ps1_material.gdshader.uid  reigns_paper.gdshader  reigns_paper.gdshader.uid  retro_psx_post.gdshader  screen_distortion.gdshader  screen_distortion.gdshader.uid  screen_dither.gdshader  screen_dither.gdshader.uid  screen_vfx.gdshader  seasonal_particles.gdshader  seasonal_particles.gdshader.uid  seasonal_snow.gdshader  seasonal_snow.gdshader.uid  whisper_glitch.gdshader  world_edge_fog.gdshader
tests/: headless_runner.gd  test_biome_system.gd  test_effect_engine.gd  test_fast_route.gd  test_fast_route.gd.uid  test_minigame_registry.gd  test_mos_guardrails.gd  test_rng.gd  test_save_system.gd  test_store_card_integration.gd  test_triade_system.gd
themes/: celtic_gba_theme.tres  gbc_theme.tres  merlin_theme.tres  reigns_theme.tres
tools/: benchmark_llm.mjs  biome_harmonizer.py  capture_baselines.ps1  card_audit.py  check_nb.ps1  check_scripts.ps1  cli.py  comms_intelligence.py  compare_models.py  compile_from_vsprompt.bat  create_colab_zip.bat  create_colab_zip.ps1  create_llm_simple_package.bat  create_orange_docx.js  create_orange_ppt.js  create_rangement_voc_ppt.js  create_tar_gz.txt  create_template_guide_ppt.js  create_transcript_mail.js  create_ultimate_zip.ps1  create_verbascope_juridique_ppt.js  diagram_helpers.js  difficulty_curve.py  faction_backfill.py  (+53 more)
(+2207 files in other folders)
